# MoyuDIT

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-installer.yml
docs/: architecture.md
src/: App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/styles/: app.css  global.css
