[package]
name = "photo_ingest_studio"
version = "0.1.0"
description = "Cross-platform photo ingest utility for photographers"
authors = ["moyumahiru"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "photo_ingest_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
rayon = "1.10"
md5 = "0.7"
blake3 = "1.5"
base64 = "0.22"
window-vibrancy = "0.6"
fs4 = "0.8"

[dev-dependencies]
tempfile = "3.15"
